--- a/05/order.html
+++ b/05/order.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
-        <p><a href="../05/order.html">주문서 작성하기</a></p>
-    </div>
+    order
 </body>
 </html>
