--- a/05/fieldset.html
+++ b/05/fieldset.html
@@ -1,4 +1,13 @@
-<h1>레드향 주문하기</h1>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>레드향 주문하기</h1>
 <form action="">
     <fieldset>
         <legend>상품 선택</legend>
@@ -8,3 +17,5 @@
         <legend>배송 정보</legend>
     </fieldset>
 </form>
+</body>
+</html>
