--- a/20230622_webpage.html
+++ b/20230622_webpage.html
@@ -427,5 +427,6 @@ min-width 사용시 작은px 먼저 .. 큰px 작성
         var a1 = document.getElementById("test1").innerText;
         document.getElementById("test1").innerHTML = "<b>바!꿈!</b>";
     </script>
+    <!-- 수정완료 -->
 </body>
 </html>
