--- a/20230703_js_checkAll.html
+++ b/20230703_js_checkAll.html
@@ -41,7 +41,7 @@
         <div>id-3</div>
     </div>
     <script>
-        //1. 화면 itme 구성(화면 초기화?)
+        //1. 화면 itme 구성(화면 초기화) (개수만큼 append를 돌림)
         const itemCnt = 10; //const 상수 = java의 final
 
         // ` <= 백틱 backtick : 문자열 형태 - 변수 사용시 ${변수명}
@@ -67,7 +67,7 @@
             console.log($(this).parent().data("id"));
             var id = $(this).parent().data("id");
             $(this).parent().remove();
-            for(var i = 0; i < $(".checkboxs > div").length ; i++) {
+            for (var i = 0; i < $(".checkboxs > div").length; i++) {
                 var $element = $(".checkboxs > div").eq(i)
                 // var element = $(".checkboxs > div").get(i);
                 var element_id = $element.data("id");
@@ -77,7 +77,7 @@
         /* 3.전체선택 이벤트 처리 Handler*/
         function allCheckHandler(e) {
             //console.log($(this).attr("checked"));     //attr()메소드는 동적페이지 변화인지되지 않음.
-           
+
             //prop() 메소드는 동적페이지 변화를 인지하고 그 결과값을 true/false로 줌.
             var allchecked = $(this).prop("checked")
 
@@ -85,13 +85,13 @@
             //checked는 값이 없기 때문에 true flase가 나온다.
 
             //현재 전체선택 상태 true / false =- item들에 적용
-            $("item").prop("checked" , allchecked);
+            $("item").prop("checked", allchecked);
 
             /* 12. 전체선택 처리 후 checkedItems 에도 적용*/
         }
         /* 5. item 이벤트 처리 Handler */
         function itemCheckHandler(e) {
-            // console.log($(this).prop("checked"));
+            //console.log($(this).prop("checked"));  
             console.log($(".item:checked"));
             if (itemCnt == $(".item:checked").length) {
                 $("#allCheck").prop("checked", true);
@@ -101,22 +101,23 @@
 
             /* 8.checkedItems에 선택된 item을 div로 생성*/
             if ($(this).prop("checked") == true) {
-                console.log($(this).parent().data("id"));
-                var dataid = $(this).parent().data("id");     //변수에 넣어준다.
+                // console.log($(this).parent().data("id")); 
+                var dataid = $(this).parent().data("id");   //변수에 넣어준다.
                 var htmlVal = "";
                 htmlVal += `
-                <div data-id= "${dataid}">
-                    <span>${dataid}</span>
-                    <button type="button" class="btnUncheck">선택해제"</button>
-                </div>
-                `;
+            <div data-id="${dataid}">
+                <span>${dataid}</span>
+                <button type="button" class="btnUncheck">선택해제</button>
+            </div>
+            `;
                 $(".checkedItems").append(htmlVal);
                 /* 10. 선택해제 이벤트 등록 - 이시점에 등록해야함. appen 된 다음*/
                 $(".btnUncheck").off("click");
+                $(".btnUncheck").on("click", btnUncheckHandler);
             }
             /* 9.checkedItems에 선택된 item을 div로 부터 제거*/
             else {
-                console.log$(this).parent().data("id");
+                console.log($(this).parent().data("id"));
                 var dataid = $(this).parent().data("id");
                 $(".checkedItems>div").each(function (idx, item) {
                     //console.log(item); =>전체를 한번만 돈다.
@@ -125,7 +126,7 @@
                         $(item).remove();
                         //each 반복문 (function)은 더 돌지 않고 마치고 싶을때 return;
                         // for문은 아니므로 breakk; 사용 불가.
-                        return;
+                        return false;
                     }
                 })
             }
